backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: stock-backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: stock-backend
  template:
    metadata:
      labels:
        app: stock-backend
    spec:
      containers:
      - name: stock-backend
        image: shobithanayak24/stock-backend1:latest
        ports:
        - containerPort: 5006
      imagePullSecrets:
      - name: regcred
