frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: stock-frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: stock-frontend
  template:
    metadata:
      labels:
        app: stock-frontend
    spec:
      containers:
      - name: stock-frontend
        image: shobithanayak24/stock-front:1.0
        ports:
        - containerPort: 3001
