backend-service.yaml
# apiVersion: apps/v1
# kind: Deployment
# metadata:
#   name: stock-backend
# spec:
#   replicas: 3
#   selector:
#     matchLabels:
#       app: stock-backend
#   template:
#     metadata:
#       labels:
#         app: stock-backend
#     spec:
#       containers:
#       - name: stock-backend
#         image: shobithanayak24/stock-backend:latest
#         ports:
#         - containerPort: 5006
#       imagePullSecrets:
#       - name: regcred
# ---
apiVersion: v1
kind: Service
metadata:
  name: stock-backend
spec:
  selector:
    app: stock-backend
  ports:
    - protocol: TCP
      port: 5006
      targetPort: 5006
      nodePort: 30002
  type: NodePort
