ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: stock-ingress
spec:
  rules:
  - host: yourdomain.com
    http:
      paths:
      - path: /api
        pathType: Prefix
        backend:
          service:
            name: stock-backend
            port:
              number: 80
      - path: /
        pathType: Prefix
        backend:
          service:
            name: stock-frontend
            port:
              number: 80
